<resources>
    <string name="app_name">MoviesDB</string>

    <string name="country">Country: %1$s</string>
    <string name="year">Release: %1$s</string>
    <string name="duration">Duration: %1$s min.</string>
    <string name="episode_duration">Episode duration: ~%1$s min.</string>
    <string name="season_count">Number of seasons: %1$s</string>
    <string name="episodes_count">Number of episodes: %1$s</string>
    <string name="budget">Budget: %1$s</string>
    <string name="network">Network: %1$s</string>
    <string name="gender_male">Gender: Male</string>
    <string name="gender_female">Gender: Female</string>
    <string name="place_of_birth">Place of birth: %1$s</string>
    <string name="birthday">Birthday: %1$s</string>
    <string name="now_playing">Now playing</string>
    <string name="popular">Popular</string>
    <string name="top_rating">Top rating</string>
    <string name="upcoming">Upcoming</string>
    <string name="on_the_air">On the air</string>
    <string name="actors">Actors</string>
    <string name="crew">Crew</string>
    <string name="movie_crew">Movie crew</string>
    <string name="movie_actor">Movie actor</string>
    <string name="tv_actor">TV actor</string>
    <string name="tv_crew">TV crew</string>
    <string name="register">&lt;a href=https://www.themoviedb.org/signup>Don\'t have an account yet? Register now&lt;/a></string>
    <string name="log_in">LOG IN</string>
    <string name="exit">LOGOUT</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="favorite_tvs">Favorite TVs</string>
    <string name="full_movies">That\'s all movies here</string>
    <string name="full_tvs">That\'s all TVs here</string>
    <string name="full_people">That\'s all peoples here</string>
    <string name="enter_data">Enter your login and password</string>
    <string name="wrong_data">You entered a wrong login or password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="find_movie">Find a movie</string>
    <string name="find_tv">Find a TV series</string>
    <string name="find_people">Find a person</string>
    <string name="on_imdb">on IMDB</string>
    <string name="on_site">on site</string>

</resources>