<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">

    <LinearLayout
        android:id="@+id/top_login_layout"
        style="@style/layout_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="3dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout"
            style="@style/input_layout_box"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/login">

            <EditText
                android:id="@+id/login_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_layout"
            style="@style/input_layout_box"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/password">

            <EditText
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/register"
            style="@style/BigTitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            android:linksClickable="true"
            android:textAlignment="center" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.user.UserFragment">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/nick_name"
                style="@style/Main_Titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@id/avatar"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="@id/avatar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_btn"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/exit"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="@id/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/avatar" />

            <TextView
                android:id="@+id/fav_movie_tv"
                style="@style/Main_Titles_chevron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/favorite_movies"
                app:layout_constraintTop_toBottomOf="@id/avatar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fav_movie_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/fav_movie_tv" />

            <TextView
                android:id="@+id/fav_tv_tv"
                style="@style/Main_Titles_chevron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/favorite_tvs"
                app:layout_constraintTop_toBottomOf="@id/fav_movie_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fav_tv_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/fav_tv_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>