<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MoviesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/layout_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_layout"
                style="@style/input_layout_box_search"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/search_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/now_playing_movies"
                style="@style/Main_Titles_chevron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/now_playing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/now_playing_movies_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/now_playing_movies" />

            <TextView
                android:id="@+id/popular_movies"
                style="@style/Main_Titles_chevron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/now_playing_movies_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_movies_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/popular_movies" />

            <TextView
                android:id="@+id/top_rated_movies"
                style="@style/Main_Titles_chevron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/top_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popular_movies_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_rated_movies_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/top_rated_movies" />

            <TextView
                android:id="@+id/upcoming_movies"
                style="@style/Main_Titles_chevron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/upcoming"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_rated_movies_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_movies_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/upcoming_movies" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>